fixed wrapping... I think

--- a/view-factorial/index.html
+++ b/view-factorial/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <main>
-            <p id="factorial"></p>
+            <p id="factorial" style="word-wrap: break-word;"></p>
         </main>
         <script src="./view-factorial.js"></script>
     </body>
