better font, separate CSS file

--- a/view-factorial/index.html
+++ b/view-factorial/index.html
@@ -4,10 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheer" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
+        <link rel="stylesheer" href="./style.css">
     </head>
     <body>
         <main>
-            <p id="factorial" style="word-wrap: break-word;"></p>
+            <p id="factorial"></p>
         </main>
         <script src="./view-factorial.js"></script>
     </body>
