--- a/view-factorial/index.html
+++ b/view-factorial/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheer" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
-        <link rel="stylesheer" href="./style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <main>
