--- a/view-factorial/index.html
+++ b/view-factorial/index.html
@@ -11,6 +11,6 @@
         <main>
             <p id="factorial"></p>
         </main>
-        <script src="./view-factorial.js"></script>
+        <script type="module" src="./view-factorial.js"></script>
     </body>
 </html>
