small naming fix

--- a/view-number/index.html
+++ b/view-number/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <main>
-            <p id="factorial"></p>
+            <p id="big-number"></p>
         </main>
-        <script type="module" src="./view-factorial.js"></script>
+        <script type="module" src="./view-number.js"></script>
     </body>
 </html>
